@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}

class Router {
}

' Controllers
class ProductController {
    - _repo: IProductRepositories
    + GetAllProducts([FromQuery] GetProductRequestDTO request): Task<IActionResult>
}

' Repository Interface
interface IProductRepositories {
    + GetAllProducts(GetProductRequestDTO request): Task<(List<GetProductResponseDTO>, ProductPaginationDTO)>
}

' Repository Implementation
class ProductRepositories {
    - _dao: ProductDAO
    + GetAllProducts(GetProductRequestDTO request): Task<(List<GetProductResponseDTO>, ProductPaginationDTO)>
}

' Data Access Object
class ProductDAO {
    - _client.From<MenuItem> : ISupabaseTable<MenuItem>
    - _client.From<Shop> : ISupabaseTable<Shop>
    - _client.From<Profile> : ISupabaseTable<Profile>
    + GetAllProducts(GetProductRequestDTO request): Task<(List<GetProductResponseDTO>, ProductPaginationDTO)>
}

' Domain Model
class MenuItem {
    + Id: Guid
    + ShopId: Guid
    + Name: string
    + Price: decimal
    + Description: string
    + Category: string
    + IsAvailable: bool
    + Ingredient: string
    + NutritionalInfo: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

class Profile {
    + Id: Guid
    + FullName: string
    + ProfilePicture: string
    + Bio: string
    + DateOfBirth: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + Role: string
    + AccountId: Guid
}

class Shop {
    + Id: Guid
    + Name: string
    + Address: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + OwnerId: Guid
}

APIGateway -- Router
Router -- ProductController
ProductController -- IProductRepositories 
IProductRepositories <|-- ProductRepositories
ProductRepositories "1"--"1..*" ProductDAO
ProductDAO "1" -- "0..*" MenuItem
ProductDAO -- Shop
ProductDAO  --  Profile
@enduml
